--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 
 </head>
 <body>
+    <header>
+        <nav class="header-nav">
+            <h4 class="mayemcv">Mayem.CV</h4>
+            <button class="d-resume-btn">Download Resume</button>
+        </nav>
+    </header>
+    <main>
+            <section class="first-section">
+                <img src="/assets/Group.png" alt="This is hero image">
+                <h1 class="bighead">"In the near future, I hope to become a Developer."</h1>
+                <p class="description">It was 2018 since I've learned web-design. After several year's I've got a chance to learn web-development. I will try my best. </p>
+                <button class="contact-btn">contact with me</button>
+            </section>
+    </main>
+    <footer></footer>
     
 </body>
 </html>
