trying to resolve live server photo problem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
             <section class="first-section">
-                <img src="/assets/Group.png" alt="This is hero image">
+                <img src="./assets/Group.png" alt="This is hero image">
                 <h1 class="bighead">"In the near future, I hope to become a Developer."</h1>
                 <p class="description">It was 2018 since I've learned web-design. After several year's I've got a chance to learn web-development. I will try my best. </p>
                 <button class="contact-btn">contact with me</button>
