adding dot before img location

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 <p class="div-contain1-p">The tech industry is booming, and there's a high demand for skilled developers. This translates to good salaries and plenty of job opportunities.</p>
                                 </div>
                                 <div class="div-img1">
-                                <img src="/assets/Layer_1.png" alt="Layer_1.png">
+                                <img src="./assets/Layer_1.png" alt="Layer_1.png">
                                 </div>
                             </div>
                         </li>
@@ -47,7 +47,7 @@
                        <li> 
                         <div class="inner-mota2">
                         <div class="div-img2">
-                            <img src="/assets/Group 3.png" alt="Layer_1.png">
+                            <img src="./assets/Group 3.png" alt="Layer_1.png">
                         </div>
                         <div class="div-contain2">
                             <h2 class="div-contain2-h">Always learning</h2>
@@ -65,7 +65,7 @@
                                 <p class="div-contain3-p">Many developer jobs offer the flexibility to work remotely, which can be a major perk for people who value work-life balance.</p>
                             </div>
                             <div class="div-img3">
-                                <img src="/assets/Group 4.png" alt="Layer_1.png">
+                                <img src="./assets/Group 4.png" alt="Layer_1.png">
 
                             </div>
                         </div>
