--- a/index.html
+++ b/index.html
@@ -172,7 +172,13 @@
             </section>
     </main>
     <footer>
-        
+            <div class="footer">
+                <h4 class="footer-h">An Open Commitment by MD Mayem Hossen</h4>
+                <div class="icon">
+                    <a class="footer-icon1" href="https://www.facebook.com/groups/missionwebdevelopment10/?sorting_setting=CHRONOLOGICAL"><img src="./assets/facebook.png" alt=""></a>
+                    <a class="footer-icon2"  href="https://github.com/"><img src="./assets/github.png" alt=""></a>
+                    <a class="footer-icon3"  href="https://bd.linkedin.com/"><img src="./assets/linkedin-icon 1.png" alt=""></a></div>
+            </div>
         
 
     </footer>
